# dmscreentime

./: CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: linux.yml  mac.yml  win.yml
tools/ScreenTime/: README.md  ScreenTime.qrc  aboutdialog.ui  appsettings.cpp  appsettings.h  apptrayicon.cpp  apptrayicon.h  databasemanager.cpp  databasemanager.h  exeitemwidget.cpp  exeitemwidget.h  exeitemwidget.ui  historydialog.cpp  historydialog.h  historydialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
